Use C++14 if available, and sweep up some cmake leavings
Work around the issue in CMake where C++ standard doesn't get propagated
to CHECK_CXX_SOURCE_COMPILES. Also correctly check for std::make_unique;
the define was missing from the config.h header.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,15 @@ ENDIF()
 
 PROJECT(fish)
 
-# We are C++11.
-SET(CMAKE_CXX_STANDARD 11)
+# We are C++11, but can use C++14.
+LIST(FIND CMAKE_CXX_COMPILE_FEATURES "cxx_std_14" CXX_14_FLAG_IDX)
+IF (${CXX_14_FLAG_IDX} GREATER -1)
+  SET(CMAKE_CXX_STANDARD 14)
+ELSE()
+  SET(CMAKE_CXX_STANDARD 11)
+ENDIF()
+UNSET(CXX_14_FLAG_IDX)
+
 SET(DEFAULT_BUILD_TYPE "RelWithDebInfo")
 
 # Use the default flags (#6296) but remove -DNDEBUG so that asserts remain enabled.
