Introduce __warn_unused_type
This is like __warn_unused, but it says that any time this type is
returned from a function it must be used. This will help enforce error
handling.

--- a/config_cmake.h.in
+++ b/config_cmake.h.in
@@ -167,10 +167,22 @@
 # define _DARWIN_USE_64_BIT_INODE 1
 #endif
 
+/* Support __warn_unused on function return values. */
 #if __GNUC__ >= 3
 #ifndef __warn_unused
 #define __warn_unused __attribute__ ((warn_unused_result))
 #endif
 #else
 #define __warn_unused
+#endif
+
+/* Like __warn_unused, but applies to a type.
+   At the moment only clang supports this as a type attribute.
+*/
+#if defined(__clang__) && __has_attribute(warn_unused_result)
+#ifndef __warn_unused_type
+#define __warn_unused_type __attribute__ ((warn_unused_result))
+#endif
+#else
+#define __warn_unused_type
 #endif
